k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gh-action-listener-service
  namespace: gh-action-listener
spec:
  selector:
    app: gh-action-listener
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
