k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gh-action-listener-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod-registry
spec:
  rules:
  - host: actions.pedanticorderliness.com
    http:
      paths:
      - backend:
          serviceName: gh-action-listener-service
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - actions.pedanticorderliness.com
    secretName: gh-action-listener
